tests/baselines/reference/invalidTypeOfTarget.errors.txt
==== tests/cases/compiler/invalidTypeOfTarget.ts (10 errors) ====
    var x1: typeof {};
                   ~
!!! invalidTypeOfTarget.ts(1,16): error TS1003: Identifier expected.
    var x2: typeof (): void;
                   ~
!!! invalidTypeOfTarget.ts(2,16): error TS1003: Identifier expected.
                           ~
!!! invalidTypeOfTarget.ts(2,24): error TS1005: '=>' expected.
    var x3: typeof 1;
                   ~
!!! invalidTypeOfTarget.ts(3,16): error TS1003: Identifier expected.
    var x4: typeof '';
                   ~~
!!! invalidTypeOfTarget.ts(4,16): error TS1003: Identifier expected.
    var x5: typeof [];
                   ~
!!! invalidTypeOfTarget.ts(5,16): error TS1003: Identifier expected.
    var x6: typeof null;
                   ~~~~
!!! invalidTypeOfTarget.ts(6,16): error TS1006: Identifier expected; 'null' is a keyword.
    var x7: typeof function f() { };
                   ~~~~~~~~
!!! invalidTypeOfTarget.ts(7,16): error TS1006: Identifier expected; 'function' is a keyword.
    var x8: typeof /123/;
                   ~
!!! invalidTypeOfTarget.ts(8,16): error TS1003: Identifier expected.
                         
!!! invalidTypeOfTarget.ts(8,22): error TS1005: '}' expected.